gcc/testsuite/gm2/switches/uninit-variable-checking/procedures/pass/testproc.mod
MODULE testproc ;


PROCEDURE test (i: INTEGER) ;
BEGIN
   IF i = 3
   THEN

   END
END test ;


BEGIN
   test (3)
END testproc.
